# MX5-HybridDash-Firmware

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  debug.bat  sdkconfig
include/: macros.h
include/Core/: Core.h
include/FileManager/: FileManager.h
include/GUI/: GUI.h
include/Logger/: Logger.h
include/SensorManager/: SensorManager.h
include/templates/: c_header_template.h
res/fonts/c/: E1234.c  E1234_70.c  E1234_80.c  VCR_OSD_MONO_24.c
res/img/c/: blinkerLeft.c  blinkerRight.c
src/: CMakeLists.txt  main.c
src/Core/: Core.c
src/FileManager/: FileManager.c
src/GUI/: GUI.c
src/Logger/: Logger.c
src/SensorManager/: SensorManager.c
src/templates/: c_source_template.c
